# simplesim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker-image.yml
include/simplesim/: controller.hpp  drone.hpp  main.hpp  managed_sprite.hpp  pch.hpp  renderable.hpp  shapes.hpp  sim.hpp  text.hpp  utils.hpp  visuals.hpp
include/simplesim/interfaces/: resettable.hpp
launch/: all_launch.py  simplesim.launch.py
scripts/: calculate_optimal_pid_coefficients.py
src/: controller.cpp  drone.cpp  explicit_instantiations.cpp  main.cpp  managed_sprite.cpp  sim.cpp  text.cpp  visuals.cpp
