<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simplesim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nabeel@todo.todo">nabeel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sfml-dev</depend>
  <depend>range-v3</depend>
  <depend>fmt</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>magic_enum</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>